@@ -1,0 +1,9 @@
+#
+# Adapt the Template if check_command should not be the PNP Template
+#
+# check_command check_netappfiler!sparedisk
+# ________0__________|                |
+# ________1___________________________|
+#
+CUSTOM_TEMPLATE = 0,1
+
