@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $Id: testallv3.sh 70 2008-12-11 15:00:59Z svelt $
+# $Id: testallv3.sh 73 2008-12-22 15:55:30Z svelt $
 
 SECNAME=snmpuser
 AUTHKEY=dont4get
@@ -11,7 +11,7 @@ then
 	exit 1
 fi
 
-for TEST in global cpu environment nvram sparedisk faileddisk cifs-users cifs-stats cluster snapmirror
+for TEST in global cpu environment nvram sparedisk faileddisk cifs-users cifs-stats cluster snapmirror cacheage
 do
 	./check_netappfiler.py -H $1 -P3 -U $SECNAME -A $AUTHKEY -s $TEST
 done
@@ -24,5 +24,15 @@ done
 for FSIDX in `seq 1 12`
 do
 	./check_netappfiler.py -H $1 -P3 -U $SECNAME -A $AUTHKEY -s fs -f $FSIDX -w 50% -c 75%
+done
+
+for FSIDX in aggr0 /vol/vol0
+do
+	./check_netappfiler.py -H $1 -P3 -U $SECNAME -A $AUTHKEY -s vol -f $FSIDX -w 40% -c 20%
+done
+
+for FSIDX in `seq 1 12`
+do
+	./check_netappfiler.py -H $1 -P3 -U $SECNAME -A $AUTHKEY -s vol -f $FSIDX -w 40% -c 20%
 done
 
